<?php

namespace App\Dto\Vehicles;

final class TrailerDto extends VehicleDto
{}
